# manteau

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
asset/: indexer-1337x-search-page.html  jackett-1337-tmusic.xml  update.sh
indexer-1337x/: Cargo.toml
indexer-1337x/src/: lib.rs  search.rs  torrent.html  torrent.rs
indexer-bitsearch/: Cargo.toml
indexer-bitsearch/src/: date.rs  lib.rs  search.html  search.rs
indexer-helper/: Cargo.toml
indexer-helper/src/: lib.rs  numeric.rs
indexer-manager/: Cargo.toml
indexer-manager/asset/: jackett-1337-tsearch.xml
indexer-manager/src/: lib.rs  prelude.rs
indexer-manager/src/bitsearch/: mod.rs
indexer-manager/src/i1337x/: date.rs  mod.rs  result.html
indexer-prelude/: Cargo.toml
indexer-prelude/src/: lib.rs
indexer-thepiratebay/: Cargo.toml
indexer-thepiratebay/src/: common.rs  feed.json  feed.rs  lib.rs  search.json  search.rs
src/: config.rs  main.rs
src/entity/torznab/: capabilities.rs  mod.rs  rss.rs
src/entry/: mod.rs
src/entry/torznab/: capabilities.rs
src/handler/api/: blackhole.rs  capabilities.xml  mod.rs  torznab.rs
src/indexer/: mod.rs  prelude.rs
src/indexer/bitsearch/: mod.rs
src/indexer/i1337x/: mod.rs
src/service/: cache.rs  mod.rs  torznab.rs
src/service/indexer/: mod.rs  prelude.rs
src/service/indexer/bitsearch/: mod.rs
src/service/indexer/i1337x/: mod.rs
