[package]
name = "manteau"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["./indexer-manager", "./indexer-prelude", "./indexer-1337x"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manteau-indexer-manager = { path = "./indexer-manager" }
manteau-indexer-prelude = { path = "./indexer-prelude" }

axum = { version = "0.6" }
chrono = { version = "0.4", default-features = false, features = ["std"] }
quick-xml = { version = "0.28", features = ["serialize"] }
once_cell = { version = "1.17" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "tokio-rustls",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = { version = "0.7" }
tower-http = { version = "0.3", features = ["cors", "fs", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
async-trait = { version = "0.1" }
hyper = { version = "0.14" }
mockito = { version = "1.0" }
rss = { version = "2.0.2" }
serde_json = { version = "1.0" }
tower = { version = "0.4" }
