[package]
name = "manteau-indexer-bitsearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manteau-indexer-prelude = { path = "../indexer-prelude" }

async-trait = { version = "0.1" }
bytesize = { version = "1.2" }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "alloc",
] }
once_cell = { version = "1.17" }
regex = { version = "1" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "tokio-rustls",
    "rustls-tls",
] }
serde = { version = "1" }
scraper = { version = "0.15" }
tracing = { version = "0.1" }
url = { version = "2.3" }
urlencoding = { version = "2.1" }

[dev-dependencies]
mockito = { version = "1.0" }
serde_json = { version = "1.0" }
tokio = { version = "1.21", features = ["full"] }
