[package]
name = "manteau-indexer-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["numeric"]
numeric = ["dep:once_cell", "dep:regex"]

[dependencies]
once_cell = { version = "1.17", optional = true }
regex = { version = "1.8", optional = true }
