[package]
name = "manteau-indexer-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manteau-indexer-prelude = { path = "../indexer-prelude" }
manteau-indexer-1337x = { path = "../indexer-1337x" }
manteau-indexer-bitsearch = { path = "../indexer-bitsearch" }
manteau-indexer-thepiratebay = { path = "../indexer-thepiratebay" }

futures = { version = "0.3", default-features = false, features = [
    "std",
    "alloc",
] }
serde = { version = "1" }
tracing = { version = "0.1" }
